Posted on 05/19/05
- new editor font and size preferences
- new compiler preferences (javac or jikes)
- changed the default font of the editor to "Courier New" (better appearance on Windows)
- removed ANTLR 3 path from Build & Debug dialog box: it is taken from the current class path
- redirected the output of the compiler and launcher to ANTLRWorks standard err/output device

- fixed a bug were the syntax diagram would not be updated on Mac OS 10.4, Linux and Windows (validate)
- fixed a bug which would prevent drag and drop of rules to work under Windows/Linux
- fixed a bug which would prevent ANTLRWorks to correctly compile under Windows
- fixed a bug which would prevent ANTLRWorks to correctly launch the remote parser under Windows
- fixed a bug which would prevent undo/redo to work under Windows/Linux (permanent focus owner)

Posted on 05/16/05
- user can now disable automatic optimization of NFA

05/15/05
- preferences panel: startup action and tab width
- interpreter fetches the plain text representation only when running, not at each keystroke

05/14/05
- do not center the editor window at creation (Tiger compatibility)

05/13/05
- debugger location is now centered
- debugger input text displays now tokens if they are available (i.e. after a rewind)
- disable some menu items while the debugger is running
- XJLibrary now closes the first created document if it is untouched and another document is opened

05/12/05
- new tokens for (, ) and non white space characters -> they are now correctly colorized
- simple comment token was not created correctly when end of text was reached instead of new line
- disable GPathGroup timer when not visible (reduce CPU usage)

- Build & Debug: input text was correctly written but the remote parser was launched before ;-)
- removed icons in Find Usages tree view
- cancel/okButton OS compliant
- default document size is now related to the available screen size
- debugger tokens boxes can now be displayed

04/14/05
- rename
